[KARAF-5897]ensure javax.xml.stream api works for both JDK8 and 11